task: Remove inventory centric interfaces from Settlement
Changes:
- Drop EquipmentOwner, ResourceHolder & ItemHolder from Settlement
- Remove no longer needed methods
- Remove all casting of a Settlement to one of the interface
- Add a getAttached method to the EquipmentOwner, ItemHolder & ResourceHolder interfaces to support the transient code state
- Update code logic so that the getAttached method are used when an Inventory is required

ref #1729